# partial-json-parser-rs

./: .gitignore  Cargo.toml  pyobject.toml  pyproject.toml  temp.json
.github/workflows/: CI.yml
benches/: lib_bench.rs  lib_bench_py.rs  test_utils.rs
src/: lib.rs  parser.rs  partical_parser.rs  test_utils.rs  utils.rs
src/partial_parser/: mod.rs  parse_any.rs  parse_array.rs  parse_num.rs  parse_obj.rs  parse_spec.rs  parse_string.rs
src/value_parser/: mod.rs  parse_array.rs  parse_num.rs  parse_spec.rs  parse_string.rs
test_cases/: full1.txt  full2.txt  full4.txt  full5.txt  full6.txt
test_cases/settings/: settings.json
