[package]
name = "partial-json-parser-rs"
version = "0.0.1"
edition = "2021"

[lib]
name = "partial_json_parser_rs"


[[bench]]
name = "lib_bench"
harness = false

[[bench]]
name = "lib_bench_py"
harness = false

[dependencies]
proptest = "1.4.0"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
criterion = "0.5.1"
regex = "1.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4.1"
nom = "7.1.3"